# labflow

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  COMPLETE_SECURITY_AUDIT_REPORT.md  CONTRIBUTING.md  COPYRIGHT.md  Dockerfile  FINAL_SECURITY_AUDIT_CERTIFICATION.md  GITHUB_CONFIGURATION_COMPLETION_REPORT.md  GITHUB_PARAMETERS_CONFIGURATION_REPORT.md  LICENSE  README.md  SECURITY.md  SECURITY_CHECKLIST_FINAL.md  SECURITY_CLEANUP_SCRIPT.ps1  THIRD_PARTY_NOTICES.md  alembic.ini  dev-requirements.txt  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: AUTOMATION_SETUP.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
app/: annotation.py  cache.py  database.py  file_parser.py  i18n.py  init_db.py  logging_config.py  main.py  main.py.backup  main.py.corrupted  models.py  query_optimization.py  schemas.py  security.py  storage.py  test_adapters.py  test_analysis_end_to_end.py  test_cache_extra.py  test_classification.py  test_classification_api.py  test_classification_api.py.backup  test_classification_routes_extra.py  test_coverage_gaps.py  test_database_extra.py  test_file_parser.py  test_i18n.py  test_init_db_extra.py  test_integration.py  test_logging_config.py  test_main_error_paths.py  test_main_extra.py  test_main_extra_coverage.py  test_models_extra.py  test_query_optimization_extra.py  test_reasoning_api.py  test_reasoning_engine.py  test_reasoning_performance.py  test_reasoning_routes_extra.py  test_runner.py  test_sample_data_integration.py  (+5 more)
config/: analysis-tools.example.yml  file_classification_rules.yml  integrations.example.yml  integrations.yml
docs/: DOCUMENTATION_REORGANIZATION_COMPLETE.md  FILE_CLASSIFICATION_IMPLEMENTATION.md  I18N_MODULE.md  README.md  REASONING_EDITOR_GUIDE.md  USER_GUIDE_VISUALIZATION.md  frontend-visualization-completed.md
frontend/: .env.example  FRONTEND_SETUP.md  index.html  package.json  vite.config.js
sample/: 000_2_2.txt  12-1.tif  12-1.txt  12-2.tif  12-2.txt  2025-11-28_TPS19A_MYTHEN_20000.instprm  20251203 nmo.txt  CV-1mV-s.csv  EDS.docx  MOCr00012.xye  NMO-f-1.CSV  NMOC5_60s-scan_id-57208-seq_num-0001-_newport_delta-47.10.xye  PDF#04-0850.txt  PDF#24-0735.txt  PDF#33-0893.txt  PDF#44-0141.txt  bataMnO2.cif  α-MnO2.cif
scripts/: check_bundled_tools.py  check_db_state.py  inspect_db.py
wiki/: API-Reference.md  (+7 more)
(+72 files in other folders)
